<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.Html"/>
        <import type="com.object173.cfteventregestrator.feature.base.presentation.item.BaseItemViewModel.ViewState"/>
        <import type="com.object173.cfteventregestrator.feature.participant.domain.model.Participant"/>
        <variable name="viewModel"
                  type="com.object173.cfteventregestrator.feature.participant.item.presentation.ParticipantItemViewModel"/>
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewModel.viewState == ViewState.PROGRESS ? View.VISIBLE : View.GONE}"
                style="?android:attr/progressBarStyleLarge"/>

        <ScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{viewModel.viewState == ViewState.CONTENT ? View.VISIBLE : View.GONE}"
                android:background="@color/colorBackground"
                android:padding="?attr/minPadding">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participant_phone_label"
                    style="@style/Headline.Dark"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.data.phone}"
                        style="@style/Baseline"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participant_company_label"
                    style="@style/Headline.Dark"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.data.company}"
                        style="@style/Baseline"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prticipant_position_label"
                        style="@style/Headline.Dark"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.data.position}"
                        style="@style/Baseline"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/participant_email_label"
                        style="@style/Headline.Dark"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.data.email}"
                        style="@style/Baseline"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participant_date_of_registration_label"
                    style="@style/Headline.Dark"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.data.registeredDate}"
                        style="@style/Baseline"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/participant_additional_information_label"
                        style="@style/Headline.Dark"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:html="@{viewModel.data.addition}"
                        style="@style/Baseline"/>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</layout>